# geniomhe-oop-sc

./: .gitignore  CITATION.cff  README.md  consignes.txt  environment.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  conf.py  index.md  index.rst
docs/api/: index.md  plotting.md
docs/tutorials/: index.md  index.rst
notebooks/: explore.qmd
oopsc/: __init__.py  pli.py  scanpy.py
oopsc/plotting/: _anndata.py  _qc.py
oopsc/plotting/tools/: scatterplot.py
showcase/: main.py  oopsc_plots.py  sandbox.ipynb
src/oopsc/: pli.py
